--- a/css final.css
+++ b/css final.css
@@ -13,9 +13,6 @@ img{
 	padding: 0px;
 }
 
-video{
-	margin: 2px 300px;
-}
 #section1{
 	background-color: black;
 	height: 100px;
@@ -55,7 +52,7 @@ li{
 	display: block;
 	padding: 0;
 	height: 100px;
-	width: 448.3px;
+	width: 50%;
 	margin: 0;
 	background-color: gray;
 	text-decoration: none;
